test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_bool_type.draco
bool a;

proc main() void : a := 1; corp;

