test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_void_as_identifier.draco
int void;
 
proc main() void : a := 1; corp;
